responsive home page

--- a/src/appLayout.css
+++ b/src/appLayout.css
@@ -1,4 +1,12 @@
 .app-layout {
   width: 100vw;
   min-height: 100vh;
+
+  .main {
+    width: 100%;
+    min-height: 70vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
