--- a/src/components/carouselItem/carouselItem.css
+++ b/src/components/carouselItem/carouselItem.css
@@ -2,9 +2,9 @@
   aspect-ratio: 0.667;
   padding: 0.5rem;
   position: relative;
-  flex: 0 0 calc(100% / 6);
-  width: calc(100% / 6);
-  max-width: calc(100% / 6);
+  flex: 0 0 calc(100% / 3);
+  width: calc(100% / 3);
+  max-width: calc(100% / 3);
   scroll-snap-align: start;
   scroll-snap-stop: always;
 
@@ -16,5 +16,30 @@
     border-radius: var(--rounded-md);
     overflow: hidden;
 
+  }
+}
+
+/* MEDIA QUERIES */
+@media (min-width: 560px) {
+  .carouselItem {
+    flex: 0 0 calc(100% / 4);
+    width: calc(100% / 4);
+    max-width: calc(100% / 4);
+  }
+}
+
+@media (min-width: 730px) {
+  .carouselItem {
+    flex: 0 0 calc(100% / 5);
+    width: calc(100% / 5);
+    max-width: calc(100% / 5);
+  }
+}
+
+@media (min-width: 960px) {
+  .carouselItem {
+    flex: 0 0 calc(100% / 6);
+    width: calc(100% / 6);
+    max-width: calc(100% / 6);
   }
 }
