--- a/src/components/switchTabs/switchTabs.css
+++ b/src/components/switchTabs/switchTabs.css
@@ -1,23 +1,24 @@
 .switchingTabs {
-  height: 34px;
+  height: 3.4rem;
   background-color: var(--secondary-color);
   border-radius: var(--rounded-4xl);
-  padding: 2px;
+  padding: 0.2rem;
 
   .tabItems {
     display: flex;
     align-items: center;
-    height: 30px;
+    height: 3rem;
     position: relative;
+    width: fit-content;
 
     .tabItem {
       height: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 100px;
+      width: 10rem;
       color: var(--main-color);
-      font-size: 14px;
+      font-size: 1.4rem;
       position: relative;
       z-index: 1;
       cursor: pointer;
@@ -29,9 +30,9 @@
     }
 
     .movingBg {
-      height: 30px;
-      width: 100px;
-      border-radius: 15px;
+      height: 3rem;
+      width: 10rem;
+      border-radius: 1.5rem;
       background-color: var(--primary-color);
       position: absolute;
       left: 0;
