--- a/src/components/cast/cast.css
+++ b/src/components/cast/cast.css
@@ -9,7 +9,7 @@
     font-size: 2.2rem;
     font-weight: 400;
     margin-bottom: 1rem;
-    margin-left: 5.5rem;
+    margin-left: 3rem;
   }
 
   .cast-wrapper {
@@ -18,5 +18,14 @@
     overflow-x: scroll;
     padding-left: 3.5rem;
     padding-right: 3.5rem;
+  }
+}
+
+/* MEDIA QUERIES */
+@media (min-width: 1080px) {
+  .cast {
+    .cast-heading {
+      margin-left: 5.5rem;
+    }
   }
 }
