--- a/src/components/castItem/castItem.css
+++ b/src/components/castItem/castItem.css
@@ -1,12 +1,13 @@
 .castItem {
-  width: calc(100% / 7);
+  width: calc(100% / 3);
   display: flex;
   flex-direction: column;
   gap: 8px;
   align-items: center;
-  flex: 0 0 calc(100% / 7);
+  flex: 0 0 calc(100% / 3);
   padding: 1rem 2rem;
   text-align: center;
+  flex-wrap: nowrap;
 
   .cast-profile-img {
     width: 100%;
@@ -24,5 +25,34 @@
   .characterName {
     font-size: 1.4rem;
     color: rgba(255, 255, 255, 0.7);
+  }
+}
+
+/* MEDIA QUERIES */
+@media (min-width: 520px) {
+  .castItem {
+    width: calc(100% / 4);
+    flex: 0 0 calc(100% / 4);
+  }
+}
+
+@media (min-width: 730px) {
+  .castItem {
+    width: calc(100% / 5);
+    flex: 0 0 calc(100% / 5);
+  }
+}
+
+@media (min-width: 900px) {
+  .castItem {
+    width: calc(100% / 6);
+    flex: 0 0 calc(100% / 6);
+  }
+}
+
+@media (min-width: 1110px) {
+  .castItem {
+    width: calc(100% / 7);
+    flex: 0 0 calc(100% / 7);
   }
 }
