--- a/src/components/trailerItem/trailerItem.css
+++ b/src/components/trailerItem/trailerItem.css
@@ -1,11 +1,12 @@
 .trailerItem {
-  width: calc(100% / 4);
+  width: calc(100% / 2);
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  flex: 0 0 calc(100% / 4);
-  padding: 1rem 2rem;
+  flex: 0 0 calc(100% / 2);
+  padding: 1rem;
   cursor: pointer;
+  flex-wrap: nowrap;
 
   .thumbnail {
     width: 100%;
@@ -46,4 +47,19 @@
 
 .trailerItem:hover .thumbnail-img {
   filter: brightness(0.6);
+}
+
+/* MEDIA QUERIES */
+@media (min-width: 600px) {
+  .trailerItem {
+    width: calc(100% / 3);
+    flex: 0 0 calc(100% / 3);
+  }
+}
+
+@media (min-width: 1000px) {
+  .trailerItem {
+    width: calc(100% / 4);
+    flex: 0 0 calc(100% / 4);
+  }
 }
