--- a/src/pages/details/details.css
+++ b/src/pages/details/details.css
@@ -1,61 +1,65 @@
 .details {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: relative;
   margin-top: -7rem;
 
-  .shadow {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: 9;
-  }
-
-  .bottom {
-    width: 100%;
-    height: 10vh;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: linear-gradient(to bottom, transparent 0%, var(--main-color) 90%);
-    z-index: 9;
-  }
-
-  .bg-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
   .details-wrapper {
-    position: absolute;
-    height: 90vh;
+    position: relative;
     width: 100%;
     top: 0;
     left: 0;
     right: 0;
     display: flex;
-    gap: 10rem;
-    z-index: 10;
-    padding: 10rem 5.5rem;
+    flex-direction: column;
+    gap: 5rem;
+
+    .shadow {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: -1;
+    }
+
+    .bottom {
+      width: 100%;
+      height: 10rem;
+      position: absolute;
+      top: 70rem;
+      left: 0;
+      background: linear-gradient(to bottom, transparent 0%, var(--main-color) 90%);
+    }
+
+    .bg-img {
+      position: absolute;
+      width: 100%;
+      height: 80rem;
+      object-fit: cover;
+      z-index: -3;
+    }
 
     .details-left {
-      flex-basis: 25%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding-block: 10rem;
+      width: 100%;
 
       .poster-img {
-        height: 100%;
         width: auto;
+        height: 60rem;
         aspect-ratio: 0.667;
-        border-radius: 5px;
+        border-radius: var(--rounded-md);
         box-shadow: 0 1rem 2rem rgba(24, 24, 24, 0.6);
       }
     }
 
     .details-right {
-      flex-basis: 75%;
+      padding-inline: 3rem;
+      width: 100%;
 
       .details-title {
         display: flex;
@@ -165,6 +169,7 @@
         .infoItem {
           display: flex;
           align-items: center;
+          flex-wrap: wrap;
           gap: 1rem;
           font-size: 1.8rem;
           margin-bottom: 2rem;
@@ -205,4 +210,61 @@
   font-size: 2.4rem;
   font-weight: 400;
   color: var(--text-color);
+}
+
+/* MEDIA QUERIES */
+@media (min-width: 680px) {
+  .details {
+    .details-wrapper {
+      flex-direction: row;
+      padding: 0;
+      align-items: start;
+
+      .bg-img {
+        height: 100%;
+        width: 100%;
+      }
+
+      .shadow {
+        height: 100%;
+      }
+
+      .bottom {
+        bottom: 0;
+        top: unset;
+      }
+
+      .details-left {
+        margin-left: 3rem;
+        flex-basis: 25%;
+
+        .poster-img {
+          height: 50rem;
+        }
+      }
+
+      .details-right {
+        margin-right: 3rem;
+        padding-block: 10rem;
+        flex-basis: 75%;
+        padding-inline: 0;
+      }
+    }
+  }
+}
+
+@media (min-width: 1080px) {
+  .details {
+    .details-wrapper {
+      gap: 10rem;
+
+      .details-left {
+        margin-left: 5.5rem;
+      }
+
+      .details-right {
+        margin-right: 5.5rem;
+      }
+    }
+  }
 }
