--- a/src/components/trailers/trailers.css
+++ b/src/components/trailers/trailers.css
@@ -17,5 +17,11 @@
     overflow-x: scroll;
     padding-left: 3.5rem;
     padding-right: 3.5rem;
+
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
