--- a/src/pages/details/details.css
+++ b/src/pages/details/details.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  margin-top: -7rem;
+  margin-top: -8rem;
 
   .details-wrapper {
     position: relative;
@@ -12,11 +12,12 @@
     right: 0;
     display: flex;
     flex-direction: column;
-    gap: 5rem;
+    gap: 1rem;
+
 
     .shadow {
       width: 100%;
-      height: 100%;
+      height: 80rem;
       position: absolute;
       top: 0;
       left: 0;
@@ -203,13 +204,13 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
 
-.subHeading {
-  margin-left: 5.5rem;
-  font-size: 2.4rem;
-  font-weight: 400;
-  color: var(--text-color);
+  .subHeading {
+    margin-left: 3rem;
+    font-size: 2.4rem;
+    font-weight: 400;
+    color: var(--text-color);
+  }
 }
 
 /* MEDIA QUERIES */
@@ -219,6 +220,7 @@
       flex-direction: row;
       padding: 0;
       align-items: start;
+      gap: 5rem;
 
       .bg-img {
         height: 100%;
@@ -239,7 +241,7 @@
         flex-basis: 25%;
 
         .poster-img {
-          height: 50rem;
+          height: 60rem;
         }
       }
 
@@ -265,6 +267,12 @@
       .details-right {
         margin-right: 5.5rem;
       }
+    }
+  }
+
+  .header {
+    .subHeading {
+      margin-left: 5.5rem;
     }
   }
 }
